<resources>
    <string name="app_name" translatable="false">SelfHome</string>
    <string name="app_screen_settings" translatable="false">screenSettings</string>
    <string name="app_dayNight_screen_settings" translatable="false">dayNightMode</string>

    <string name="app_shortcutShortLabelSettings">Settings</string>
    <string name="app_shortcutLongLabelSettings">Open setting</string>
    <string name="app_shortcutDisabledMessageSetting">Settings disabled</string>
    <string name="app_shortcutShortLabelFlashLight">Flash light</string>
    <string name="app_shortcutLongLabelFlashLight">Open flash light</string>
    <string name="app_shortcutDisabledMessageFlashLight">Flash light disabled</string>
    <string name="app_shortcutShortLabelSecurity">Security</string>
    <string name="app_shortcutLongLabelSecurity">Open security</string>
    <string name="app_shortcutDisabledMessageSecurity">Security disabled</string>


    <string name="noWifiNetworkResponseErr">You are not connected to a wifi network, so it\'s impossible for me find any SelfHome server</string>
    <string name="titleHandleNoWifiNetworkResponseErr">Error</string>
    <string name="positiveHandleNoWifiNetworkResponseErr">Settings</string>
    <string name="negativeHandleNoWifiNetworkResponseErr">Close app</string>

    <string name="noServerResponseErr">I can\'t found any SelfHome server that provides the service</string>
    <string name="titleHandleNoServerResponseErr">Important</string>
    <string name="positiveHandleNoServerResponseErr">Try again</string>
    <string name="negativeHandleNoServerResponseErr">Add</string>

    <string name="connect_server_from_notification">Connecting to found server</string>

    <string name="noDeviceFoundErr">NO DEVICE FOUND</string>
    <string name="noGroupsFoundErr">NO GROUP FOUND</string>

    <string name="groupMenuButton">Groups</string>
    <string name="newGroupButton">Create new</string>
    <string name="groupNameHintField">Name group</string>
    <string name="createNewGroupButton">Confirm</string>
    <string name="deleteGroupButton">Delete</string>
    <string name="deviceView">Devices</string>
    <string name="groupView">Groups</string>
    <string name="newGroupView">New group</string>
    <string name="modGroupView">Modify group</string>
    <string name="actionModeColorPitcherSwitch">Continuous</string>

    <string name="newGroupIncompleteResponse">Missing information</string>
    <string name="titleNewGroupIncompleteResponse">Important</string>
    <string name="negativeNewGroupIncompleteResponse">Back</string>

    <string name="deviceSwitchGetStateErr">Error getting device state</string>
    <string name="deviceSwitchSetStateErr">Turning failed</string>
    <string name="deviceSwitchSetStateOn">Turning OFF</string>
    <string name="deviceSwitchSetStateOff">Turning ON</string>
    <string name="deviceGetStateOff">Device is OFF</string>
    <string name="deviceGetStateOn">Device is ON</string>
    <string name="deviceSetStateColor">Changing device color</string>
    <string name="deviceSetStateColorErr">Error changing device color</string>

    <string name="groupSwitchStateErr">Error changing group state</string>
    <string name="groupSwitchState">Changing group state</string>

    <string name="createNewGroupErr">Error create new group</string>
    <string name="insertDeviceInGroupErr">Error insert device</string>
    <string name="removeDeviceFromGroupErr">Error removing device</string>

    <string name="settingsNameMenu">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="languageSettingsNameMenu">Language</string>
    <string name="screenSettingsNameMenu">Screen</string>
    <string name="dayNightScreenSettingsNameMenu">Enable night mode</string>
    <string name="terminalSettingsNameMenu">Terminal</string>
    <string name="terminalViewHint">Put your code here…</string>
    <string name="terminalExecuteButton">Execute</string>

    <string name="titleLanguageRequest">Choose language</string>
    <string name="positiveLanguageRequest">Confirm</string>
    <string name="negativeLanguageRequest">Cancel</string>

    <string name="genNewKeyPairButton">New keys</string>
    <string name="calcSecureResponseButton">Calculate security message</string>

    <!--<string name="noServerResponseErr">I can\'t found any SelfHome server that provides the service</string>-->

    <string name="notification_alert_name" translatable="false">Alert</string>
    <string name="notification_alert_description" translatable="false">Alert channel</string>
    <string name="notification_notification_name" translatable="false">Notification</string>
    <string name="notification_notification_description" translatable="false">Notification channel</string>
    <string name="notification_terminal_title">Script terminated</string>
    <string name="notification_terminal_text">Your script has terminated with result:</string>
    <string name="notification_find_server_title">Find server</string>
    <string name="notification_find_server_text">You can use SelfHome app in this network</string>
    <string name="neutralHandleNoServerResponseErr">Exit</string>

    <string name="titleHandleManualIp">Set IP</string>
    <string name="messageHandleManualIp">Add the server IP manually</string>
    <string name="hintIPPortHandleManualIp" translatable="false">IP:port</string>
    <string name="positiveHandleManualIp">Add</string>
    <string name="negativeHandleManualIp">Cancel</string>

</resources>