<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/newGroupLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
    android:background="?attr/layout_backgroundColor">

    <include
        android:id="@+id/app_toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/labelNewGroupView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newGroupView"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/title_size"
        app:layout_constraintBottom_toTopOf="@+id/screenSettingsView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_toolbar" />

    <ScrollView
        android:id="@+id/screenSettingsView"
        android:layout_width="343dp"
        android:layout_height="411dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:id="@+id/devices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/newGroupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/groupNameHintField"
                android:inputType="textPersonName" />


        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="364dp"
        android:layout_height="137dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/screenSettingsView"
        app:layout_constraintVertical_bias="0.65999997">

        <Button
            android:id="@+id/createNewGroupMenu"
            android:layout_width="@dimen/action_button_width"
            android:layout_height="@dimen/action_button_height"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/createNewGroupButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.63" />

        <Button
            android:id="@+id/deleteGroupMenu"
            android:layout_width="@dimen/action_button_width"
            android:layout_height="@dimen/action_button_height"
            android:backgroundTint="?attr/importantColor"
            android:text="@string/deleteGroupButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>